@@ -246,7 +246,7 @@
     "16": "Manga",
     "17": "Maçã",
     "18": "Limão",
-    "19": "Bergamota",
+    "19": "Couve",
     "20": "Banana",
     "21": "Abacaxi",
     "22": "Pera",
